<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Masukkan nama"
        android:inputType="text"
        android:minWidth="200dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/buttonGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Sapa"/>

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonGreet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>
